--- a/ACQ-Proto/package.json
+++ b/ACQ-Proto/package.json
@@ -1,6 +1,20 @@
 {
-  "name": "poe-parse-base",
+  "name": "ACQ-Proto-base",
   "version": "1.0.0",
+  "dependencies": {
+    "async": "2.6.1",
+    "cors": "2.8.4",
+    "express": "4.16.3",
+    "jsonfile": "4.0.0",
+    "moment": "2.22.2",
+    "request": "2.87.0"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "main": "server.js",
+  "devDependencies": {},
+  "description": "",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rpingx/ACQ-Proto.git"
