--- a/ACQ-Proto/package.json
+++ b/ACQ-Proto/package.json
@@ -7,6 +7,8 @@
     "express": "4.16.3",
     "jsonfile": "4.0.0",
     "moment": "2.22.2",
+    "nedb": "1.8.0",
+    "npm": "6.9.0",
     "request": "2.87.0"
   },
   "scripts": {
